bloembraaden/_front/admin.css
/* ... */
#admin_sidebar_checkbox:checked ~ #admin_sidebar {
    left: 0;
    width: var(--admin-sidebar-width);
    max-width: calc(100vw - 5px);
    min-width: 105px;
}

#admin_sidebar_checkbox:checked ~ #admin_console_button,
#admin_console_checkbox:checked ~ #admin_console_button {
    display: none;
}

#PEATCMS_admin_page .spacer {
    clear: both;
    margin-top: 3em;
    height: 4.5em;
}

#PEATCMS_admin_page .footer a,
#PEATCMS_admin_page .footer {
    font-size: .8rem;
    text-align: center;
    color: var(--admin-color-accent);
}

/**
 * Order template specials
 */
#PEATCMS_admin_page input[type="text"].admin_order_search {
    max-width: 180px;
}

.admin_order_search.right {
    position: absolute;
    right: 17px;
    top: 8px;
    /*float: right;*/
}

.payment-table,
.order-table {
    display: table;
    width: 100%;
}

.payment-table .row,
.order-table .row {
    display: table-row;
}

.payment-table .header,
.order-table .header {
    display: table-row;
    background-color: var(--admin-color-accent-transparent);
}

.payment-table .header > *,
.order-table .header > * {
    display: table-cell;
    font-weight: bold;
}

.payment-table .row > a:not(.button),
.order-table .row > a:not(.button),
.payment-table .row > *,
.order-table .row > * {
    display: table-cell;
    padding: .1em .25em;
}

.order-table .row > .amount {
    text-align: right;
}

.order-table .row:not([data-emailed]) {
    background-color: var(--admin-color-accent-neutral);
}

.order-table .row[data-paid] {
    background-color: var(--admin-color-ok-bg);
}

.order-table .row[data-myparcel_exported] .status:after {

}

.order-table .row .status {
    color: var(--admin-color-no);
}

.order-table .row[data-myparcel_exported_success] .status {
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 203.6 203.6'%3E%3C!-- Icon --%3E%3Cpath fill='%230f5c47' d='M16.6,148c-5.7,0-11.2-2.9-14.2-8.2c-4.6-7.9-1.9-17.9,6-22.5L111,57.7c7.9-4.6,17.9-1.9,22.5,6 s1.9,17.9-6,22.5L24.9,145.8C22.3,147.3,19.5,148,16.6,148z M68.1,177.6c-5.7,0-11.2-2.9-14.2-8.2c-4.6-7.9-1.9-17.9,6-22.5 l51.3-29.8c7.9-4.6,17.9-1.9,22.5,6s1.9,17.9-6,22.5l-51.3,29.8C73.8,176.8,70.9,177.6,68.1,177.6z M16.5,88.7 c-5.7,0-11.2-2.9-14.2-8.2c-4.6-7.9-1.9-17.9,6-22.5l51.2-29.8c7.9-4.6,17.9-1.9,22.5,6s1.9,17.9-6,22.5L24.7,86.5 C22.1,88,19.3,88.7,16.5,88.7z'%3E%3C/path%3E%3C/svg%3E");
}

.order-table .header svg {
    fill: #0f5c47;
    width: 22px;
    margin-left: 4px;
    vertical-align: middle;
}

.payment-table .row:not([data-processed]) {
    background-color: var(--admin-color-no-bg);
}

textarea.code {
    border: none;
    background-color: transparent;
    height: 1.5em;
}

header.payment {
    font-weight: normal;
}

/**
 * paging with a bit of animation now
 */
.PEATCMS_admin .paging {
    padding: .5rem 0;
    position: absolute;
}

#PEATCMS_admin_page .paging + section,
.PEATCMS_admin .paging + section {
    margin-top: 2.5rem;
}

.PEATCMS_admin .paging a {
    display: inline-block;
    float: left;
    width: .4rem;
    height: .4rem;
    margin-top: .4rem;
    line-height: 1.4em;
    font-size: 30%;
    padding: 0;
    text-align: center;
    overflow: hidden;
    transition: all ease-in .4s;
    outline: solid 1px var(--admin-color-accent);
    outline-offset: -.5px;
}

.PEATCMS_admin .paging a.peatcms-current-slug {
    text-decoration: none;
    background-color: var(--admin-color-accent);
    color: var(--admin-color-paper);
}

.PEATCMS_admin .paging a[data-page-distance="2"] {
    width: 1.6rem;
    height: 1.2rem;
    margin-top: .1rem;
    font-size: 90%;
}

.PEATCMS_admin .paging a[data-page-distance="3"] {
    width: 1.1rem;
    height: .9rem;
    margin-top: .2rem;
    font-size: 70%;
}

.PEATCMS_admin .paging a[data-page-distance="4"] {
    width: .6rem;
    height: .6rem;
    margin-top: .3rem;
    font-size: 50%;
}

.PEATCMS_admin .paging a:hover,
.PEATCMS_admin .paging a[data-page-distance="1"],
.PEATCMS_admin .paging a:focus-visible,
.PEATCMS_admin .paging a.peatcms-current-slug {
    width: 2rem;
    height: 1.4rem;
    margin-top: 0;
    font-size: 100%;
}

.payment-table .row.raw {
    display: none;
}

